package com.github.kokasumi.design.principles.ocp.alert;

/**
 * @version v1.0
 * @author: lg
 * @date: 2022/11/16 10:17
 * @description
 * @since v1.0
 */
public enum NotificationEmergencyLevel {
    SEVERE,
    URGENCY,
    NORMAL,
    TRIVIAL
}
